--- a/Training_dataset.ipynb
+++ b/Training_dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "79c211e5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cd45a54b",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7ab71aa7",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "477e39b5",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0f8695a7",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "43b2bf4d",
    "metadata": {
     "scrolled": true
@@ -286,7 +286,7 @@
        "max       9.935091   298.560117  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "951a9ab9",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "58735d6f",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "rainfall     1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "a9062ddb",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "5aaaea50",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_10284\\1896663331.py:2: UserWarning: \n",
+      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_20340\\1896663331.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "4288ce4e",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "3bdce097",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "a7f4540b",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340         1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "715830f1",
    "metadata": {},
    "outputs": [],
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "df5300a1",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "(2200, 7)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "755dfaee",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "(2200,)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "7a9d6d85",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "ccb5d9f3",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "62117d18",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "(1760, 7)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,16 +867,476 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a43ddfd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(440, 7)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6e2ab26c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>P</th>\n",
+       "      <th>K</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>rainfall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1656</th>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16.396243</td>\n",
+       "      <td>92.181519</td>\n",
+       "      <td>6.625539</td>\n",
+       "      <td>102.944161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752</th>\n",
+       "      <td>37</td>\n",
+       "      <td>79</td>\n",
+       "      <td>19</td>\n",
+       "      <td>27.543848</td>\n",
+       "      <td>69.347863</td>\n",
+       "      <td>7.143943</td>\n",
+       "      <td>69.408782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>7</td>\n",
+       "      <td>73</td>\n",
+       "      <td>25</td>\n",
+       "      <td>27.521856</td>\n",
+       "      <td>63.132153</td>\n",
+       "      <td>7.288057</td>\n",
+       "      <td>45.208411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>101</td>\n",
+       "      <td>70</td>\n",
+       "      <td>48</td>\n",
+       "      <td>25.360592</td>\n",
+       "      <td>75.031933</td>\n",
+       "      <td>6.012697</td>\n",
+       "      <td>116.553145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1179</th>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>35.474783</td>\n",
+       "      <td>47.972305</td>\n",
+       "      <td>6.279134</td>\n",
+       "      <td>97.790725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1638</th>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21.213070</td>\n",
+       "      <td>91.353492</td>\n",
+       "      <td>7.817846</td>\n",
+       "      <td>112.983436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1095</th>\n",
+       "      <td>108</td>\n",
+       "      <td>94</td>\n",
+       "      <td>47</td>\n",
+       "      <td>27.359116</td>\n",
+       "      <td>84.546250</td>\n",
+       "      <td>6.387431</td>\n",
+       "      <td>90.812505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1130</th>\n",
+       "      <td>11</td>\n",
+       "      <td>36</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27.920633</td>\n",
+       "      <td>51.779659</td>\n",
+       "      <td>6.475449</td>\n",
+       "      <td>100.258567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1294</th>\n",
+       "      <td>11</td>\n",
+       "      <td>124</td>\n",
+       "      <td>204</td>\n",
+       "      <td>13.429886</td>\n",
+       "      <td>80.066340</td>\n",
+       "      <td>6.361141</td>\n",
+       "      <td>71.400430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>32</td>\n",
+       "      <td>78</td>\n",
+       "      <td>22</td>\n",
+       "      <td>23.970814</td>\n",
+       "      <td>62.355576</td>\n",
+       "      <td>7.007038</td>\n",
+       "      <td>53.409060</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1760 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        N    P    K  temperature   humidity        ph    rainfall\n",
+       "1656   17   16   14    16.396243  92.181519  6.625539  102.944161\n",
+       "752    37   79   19    27.543848  69.347863  7.143943   69.408782\n",
+       "892     7   73   25    27.521856  63.132153  7.288057   45.208411\n",
+       "1041  101   70   48    25.360592  75.031933  6.012697  116.553145\n",
+       "1179    0   17   30    35.474783  47.972305  6.279134   97.790725\n",
+       "...   ...  ...  ...          ...        ...       ...         ...\n",
+       "1638   10    5    5    21.213070  91.353492  7.817846  112.983436\n",
+       "1095  108   94   47    27.359116  84.546250  6.387431   90.812505\n",
+       "1130   11   36   31    27.920633  51.779659  6.475449  100.258567\n",
+       "1294   11  124  204    13.429886  80.066340  6.361141   71.400430\n",
+       "860    32   78   22    23.970814  62.355576  7.007038   53.409060\n",
+       "\n",
+       "[1760 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcea32d1",
+   "metadata": {},
+   "source": [
+    "## Scale the features using MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "23b9b8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "ms = MinMaxScaler()\n",
+    "\n",
+    "X_train = ms.fit_transform(X_train)\n",
+    "X_test = ms.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f8e614ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.12142857, 0.07857143, 0.045     , ..., 0.9089898 , 0.48532225,\n",
+       "        0.29685161],\n",
+       "       [0.26428571, 0.52857143, 0.07      , ..., 0.64257946, 0.56594073,\n",
+       "        0.17630752],\n",
+       "       [0.05      , 0.48571429, 0.1       , ..., 0.57005802, 0.58835229,\n",
+       "        0.08931844],\n",
+       "       ...,\n",
+       "       [0.07857143, 0.22142857, 0.13      , ..., 0.43760347, 0.46198144,\n",
+       "        0.28719815],\n",
+       "       [0.07857143, 0.85      , 0.995     , ..., 0.76763665, 0.44420505,\n",
+       "        0.18346657],\n",
+       "       [0.22857143, 0.52142857, 0.085     , ..., 0.56099735, 0.54465022,\n",
+       "        0.11879596]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d93f5e21",
+   "metadata": {},
+   "source": [
+    "## Standarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fb8e8a41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "\n",
+    "\n",
+    "sc.fit(X_train)\n",
+    "X_train = sc.transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c4647d72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-9.03426596e-01, -1.12616170e+00, -6.68506601e-01, ...,\n",
+       "         9.36586183e-01,  1.93473784e-01,  5.14970176e-03],\n",
+       "       [-3.67051340e-01,  7.70358846e-01, -5.70589522e-01, ...,\n",
+       "        -1.00470485e-01,  8.63917548e-01, -6.05290566e-01],\n",
+       "       [-1.17161422e+00,  5.89737842e-01, -4.53089028e-01, ...,\n",
+       "        -3.82774991e-01,  1.05029771e+00, -1.04580687e+00],\n",
+       "       ...,\n",
+       "       [-1.06433917e+00, -5.24091685e-01, -3.35588533e-01, ...,\n",
+       "        -8.98381379e-01, -6.34357580e-04, -4.37358211e-02],\n",
+       "       [-1.06433917e+00,  2.12501638e+00,  3.05234239e+00, ...,\n",
+       "         3.86340190e-01, -1.48467347e-01, -5.69036842e-01],\n",
+       "       [-5.01145154e-01,  7.40255346e-01, -5.11839275e-01, ...,\n",
+       "        -4.18045489e-01,  6.86860180e-01, -8.96531475e-01]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "911d95a7",
+   "metadata": {},
+   "source": [
+    "## Training Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b8d556b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes  with accuracy : 0.9954545454545455\n",
+      "Support Vector Machine  with accuracy : 0.9681818181818181\n",
+      "Decision Tree  with accuracy : 0.9886363636363636\n",
+      "Random Forest  with accuracy : 0.9931818181818182\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# create instances of all models\n",
+    "models = {\n",
+    "    'Naive Bayes': GaussianNB(),\n",
+    "    'Support Vector Machine': SVC(),\n",
+    "    'Decision Tree': DecisionTreeClassifier(),\n",
+    "    'Random Forest': RandomForestClassifier(),\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "for name, md in models.items():\n",
+    "    md.fit(X_train,y_train)\n",
+    "    ypred = md.predict(X_test)\n",
+    "    \n",
+    "    print(f\"{name}  with accuracy : {accuracy_score(y_test,ypred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "661805c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9954545454545455"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nvb = GaussianNB()\n",
+    "nvb.fit(X_train,y_train)\n",
+    "ypred = nvb.predict(X_test)\n",
+    "accuracy_score(y_test,ypred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e03c17",
+   "metadata": {},
+   "source": [
+    "## Predictive System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9ca06289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommendation(N, P, k, temperature, humidity, ph, rainfall):\n",
+    "    features = np.array([[N, P, k, temperature, humidity, ph, rainfall]])\n",
+    "    transformed_features = ms.transform(features)\n",
+    "    transformed_features = sc.transform(transformed_features)\n",
+    "    prediction = nvb.predict(transformed_features).reshape(1, -1)\n",
+    "    \n",
+    "    return prediction[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5e0316c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rice is a best crop to be cultivated \n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 60\n",
+    "P = 70\n",
+    "k = 50\n",
+    "temperature = 40.0\n",
+    "humidity = 20\n",
+    "ph = 10\n",
+    "rainfall = 100\n",
+    "\n",
+    "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
+    "\n",
+    "\n",
+    "crop_dict = {1: \"Rice\", 2: \"Maize\", 3: \"Jute\", 4: \"Cotton\", 5: \"Coconut\", 6: \"Papaya\", 7: \"Orange\",\n",
+    "                 8: \"Apple\", 9: \"Muskmelon\", 10: \"Watermelon\", 11: \"Grapes\", 12: \"Mango\", 13: \"Banana\",\n",
+    "                 14: \"Pomegranate\", 15: \"Lentil\", 16: \"Blackgram\", 17: \"Mungbean\", 18: \"Mothbeans\",\n",
+    "                 19: \"Pigeonpeas\", 20: \"Kidneybeans\", 21: \"Chickpea\", 22: \"Coffee\"}\n",
+    "\n",
+    "if predict[0] in crop_dict:\n",
+    "    crop = crop_dict[predict[0]]\n",
+    "    print(\"{} is a best crop to be cultivated \".format(crop))\n",
+    "else:\n",
+    "    print(\"Sorry are not able to recommend a proper crop for this environment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e6336e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "1fab677e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(nvb,open('model.pkl','wb'))\n",
+    "pickle.dump(ms,open('minmaxscaler.pkl','wb'))\n",
+    "pickle.dump(sc,open('standscaler.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6e2ab26c",
+   "id": "4dc3dea6",
    "metadata": {},
    "outputs": [],
    "source": []
