--- a/Training_dataset.ipynb
+++ b/Training_dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "79c211e5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cd45a54b",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7ab71aa7",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "477e39b5",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0f8695a7",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "43b2bf4d",
    "metadata": {
     "scrolled": true
@@ -286,7 +286,7 @@
        "max       9.935091   298.560117  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "951a9ab9",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "58735d6f",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "rainfall     1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a9062ddb",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5aaaea50",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_20340\\1896663331.py:2: UserWarning: \n",
+      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_8616\\1896663331.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "4288ce4e",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "3bdce097",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a7f4540b",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340         1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "715830f1",
    "metadata": {},
    "outputs": [],
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "df5300a1",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "(2200, 7)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "755dfaee",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "(2200,)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "7a9d6d85",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "ccb5d9f3",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "62117d18",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "(1760, 7)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "a43ddfd1",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "(440, 7)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "6e2ab26c",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
        "[1760 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "23b9b8ec",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "f8e614ce",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1110,7 @@
        "        0.11879596]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "fb8e8a41",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "c4647d72",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
        "        -4.18045489e-01,  6.86860180e-01, -8.96531475e-01]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "id": "b8d556b6",
    "metadata": {},
    "outputs": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "id": "661805c2",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1238,7 @@
        "0.9954545454545455"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "9ca06289",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "5e0316c4",
    "metadata": {},
    "outputs": [
@@ -1284,18 +1284,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rice is a best crop to be cultivated \n"
+      "Maize is a best crop to be cultivated \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "N = 60\n",
-    "P = 70\n",
-    "k = 50\n",
-    "temperature = 40.0\n",
-    "humidity = 20\n",
-    "ph = 10\n",
-    "rainfall = 100\n",
+    "N = 71\n",
+    "P = 35\n",
+    "k = 24\n",
+    "temperature = 22\n",
+    "humidity = 59\n",
+    "ph = 5\n",
+    "rainfall = 67\n",
     "\n",
     "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
     "\n",
@@ -1322,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "1fab677e",
    "metadata": {},
    "outputs": [],
