--- a/Training_dataset.ipynb
+++ b/Training_dataset.ipynb
@@ -529,7 +529,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_8616\\1896663331.py:2: UserWarning: \n",
+      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_12332\\1896663331.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1196,7 +1196,7 @@
      "text": [
       "Naive Bayes  with accuracy : 0.9954545454545455\n",
       "Support Vector Machine  with accuracy : 0.9681818181818181\n",
-      "Decision Tree  with accuracy : 0.9886363636363636\n",
+      "Decision Tree  with accuracy : 0.9840909090909091\n",
       "Random Forest  with accuracy : 0.9931818181818182\n"
      ]
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "5e0316c4",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maize is a best crop to be cultivated \n"
+      "Pigeonpeas is a best crop to be cultivated \n"
      ]
     },
     {
@@ -1297,13 +1297,13 @@
     }
    ],
    "source": [
-    "N = 71\n",
-    "P = 35\n",
-    "k = 24\n",
-    "temperature = 22\n",
-    "humidity = 59\n",
+    "N = 13\n",
+    "P = 60\n",
+    "k = 25\n",
+    "temperature = 17\n",
+    "humidity = 20\n",
     "ph = 5\n",
-    "rainfall = 67\n",
+    "rainfall = 128\n",
     "\n",
     "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
     "\n",
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "1fab677e",
    "metadata": {},
    "outputs": [],
@@ -1345,6 +1345,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4dc3dea6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ba1bc0",
    "metadata": {},
    "outputs": [],
    "source": []
