--- a/Training_dataset.ipynb
+++ b/Training_dataset.ipynb
@@ -62,6 +62,29 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5af5fac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value in the column: 298.5601175\n",
+      "Manimum value in the column: 20.21126747\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "max_value = crop['rainfall'].max()\n",
+    "min_value = crop['rainfall'].min()\n",
+    "print(\"Maximum value in the column:\", max_value)\n",
+    "print(\"Manimum value in the column:\", min_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7ab71aa7",
    "metadata": {},
    "outputs": [
@@ -93,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "477e39b5",
    "metadata": {},
    "outputs": [
@@ -111,7 +134,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0f8695a7",
    "metadata": {},
    "outputs": [
@@ -132,7 +155,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "43b2bf4d",
    "metadata": {
     "scrolled": true
@@ -286,7 +309,7 @@
        "max       9.935091   298.560117  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "951a9ab9",
    "metadata": {},
    "outputs": [
@@ -330,7 +353,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "58735d6f",
    "metadata": {},
    "outputs": [
@@ -476,7 +499,7 @@
        "rainfall     1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a9062ddb",
    "metadata": {},
    "outputs": [
@@ -499,7 +522,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5aaaea50",
    "metadata": {},
    "outputs": [
@@ -529,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_12332\\1896663331.py:2: UserWarning: \n",
+      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_9528\\1896663331.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -571,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4288ce4e",
    "metadata": {},
    "outputs": [],
@@ -605,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3bdce097",
    "metadata": {},
    "outputs": [
@@ -638,7 +661,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a7f4540b",
    "metadata": {},
    "outputs": [
@@ -753,7 +776,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340         1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "715830f1",
    "metadata": {},
    "outputs": [],
@@ -784,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "df5300a1",
    "metadata": {},
    "outputs": [
@@ -794,7 +817,7 @@
        "(2200, 7)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "755dfaee",
    "metadata": {},
    "outputs": [
@@ -815,7 +838,7 @@
        "(2200,)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "7a9d6d85",
    "metadata": {},
    "outputs": [],
@@ -836,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ccb5d9f3",
    "metadata": {},
    "outputs": [],
@@ -846,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "62117d18",
    "metadata": {},
    "outputs": [
@@ -856,7 +879,7 @@
        "(1760, 7)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a43ddfd1",
    "metadata": {},
    "outputs": [
@@ -877,7 +900,7 @@
        "(440, 7)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "6e2ab26c",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1078,7 @@
        "[1760 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "23b9b8ec",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "f8e614ce",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1133,7 @@
        "        0.11879596]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "fb8e8a41",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "c4647d72",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1190,7 @@
        "        -4.18045489e-01,  6.86860180e-01, -8.96531475e-01]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "b8d556b6",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1219,7 @@
      "text": [
       "Naive Bayes  with accuracy : 0.9954545454545455\n",
       "Support Vector Machine  with accuracy : 0.9681818181818181\n",
-      "Decision Tree  with accuracy : 0.9840909090909091\n",
+      "Decision Tree  with accuracy : 0.9818181818181818\n",
       "Random Forest  with accuracy : 0.9931818181818182\n"
      ]
     }
@@ -1227,26 +1250,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcefddd0",
+   "metadata": {},
+   "source": [
+    "nvb = GaussianNB()\n",
+    "nvb.fit(X_train,y_train)\n",
+    "ypred = nvb.predict(X_test)\n",
+    "accuracy_score(y_test,ypred)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "661805c2",
+   "execution_count": 50,
+   "id": "cdbae20b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9954545454545455"
+       "0.9931818181818182"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nvb = GaussianNB()\n",
-    "nvb.fit(X_train,y_train)\n",
-    "ypred = nvb.predict(X_test)\n",
+    "rfc = RandomForestClassifier()\n",
+    "rfc.fit(X_train,y_train)\n",
+    "ypred = rfc.predict(X_test)\n",
     "accuracy_score(y_test,ypred)"
    ]
   },
@@ -1259,13 +1293,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "9ca06289",
+   "cell_type": "markdown",
+   "id": "4a504844",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def recommendation(N, P, k, temperature, humidity, ph, rainfall):\n",
+    "def rec(N, P, k, temperature, humidity, ph, rainfall):\n",
     "    features = np.array([[N, P, k, temperature, humidity, ph, rainfall]])\n",
     "    transformed_features = ms.transform(features)\n",
     "    transformed_features = sc.transform(transformed_features)\n",
@@ -1276,7 +1308,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
+   "id": "5fd50448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommendation(N, P, k, temperature, humidity, ph, rainfall):\n",
+    "    features = np.array([[N, P, k, temperature, humidity, ph, rainfall]])\n",
+    "    transformed_features = ms.transform(features)\n",
+    "    transformed_features = sc.transform(transformed_features)\n",
+    "    prediction = rfc.predict(transformed_features).reshape(1, -1)\n",
+    "    \n",
+    "    return prediction[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "5e0316c4",
    "metadata": {},
    "outputs": [
@@ -1284,6 +1332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Kidneybeans is a best crop to be cultivated \n",
       "Pigeonpeas is a best crop to be cultivated \n"
      ]
     },
@@ -1292,20 +1341,24 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Asus\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "N = 13\n",
-    "P = 60\n",
-    "k = 25\n",
-    "temperature = 17\n",
-    "humidity = 20\n",
+    "N = 11\n",
+    "P = 71\n",
+    "k = 17\n",
+    "temperature = 19\n",
+    "humidity = 21\n",
     "ph = 5\n",
-    "rainfall = 128\n",
+    "rainfall = 82\n",
     "\n",
     "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
+    "predict2 = rec(N,P,k,temperature,humidity,ph,rainfall)\n",
+    "\n",
     "\n",
     "\n",
     "crop_dict = {1: \"Rice\", 2: \"Maize\", 3: \"Jute\", 4: \"Cotton\", 5: \"Coconut\", 6: \"Papaya\", 7: \"Orange\",\n",
@@ -1315,6 +1368,13 @@
     "\n",
     "if predict[0] in crop_dict:\n",
     "    crop = crop_dict[predict[0]]\n",
+    "    print(\"{} is a best crop to be cultivated \".format(crop))\n",
+    "else:\n",
+    "    print(\"Sorry are not able to recommend a proper crop for this environment\")\n",
+    "    \n",
+    "    \n",
+    "if predict2[0] in crop_dict:\n",
+    "    crop = crop_dict[predict2[0]]\n",
     "    print(\"{} is a best crop to be cultivated \".format(crop))\n",
     "else:\n",
     "    print(\"Sorry are not able to recommend a proper crop for this environment\")"
@@ -1330,13 +1390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "id": "1fab677e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(nvb,open('model.pkl','wb'))\n",
+    "pickle.dump(rfc,open('model.pkl','wb'))\n",
     "pickle.dump(ms,open('minmaxscaler.pkl','wb'))\n",
     "pickle.dump(sc,open('standscaler.pkl','wb'))"
    ]
